overflow fixed

--- a/style.css
+++ b/style.css
@@ -179,7 +179,12 @@ body {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .left-side {
+  .left-side,
+  .right-side {
+    width: 100%;
+  }
+
+  .skills-container ul {
     width: 100%;
   }
 }
